--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -4,6 +4,9 @@
  * work well for content-centric websites.
  */
 
+ /* Google Fonts */
+ @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
+
 /* You can override the default Infima variables here. */
 :root {
   --ifm-color-primary: #25c2a0;
@@ -14,6 +17,7 @@
   --ifm-color-primary-lighter: rgb(102, 212, 189);
   --ifm-color-primary-lightest: rgb(146, 224, 208);
   --ifm-code-font-size: 95%;
+  --ifm-font-family-base: 'Noto Sans JP', sans-serif;
 }
 
 .docusaurus-highlight-code-line {
