--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -17,6 +17,7 @@
   --ifm-color-primary-lighter: rgb(102, 212, 189);
   --ifm-color-primary-lightest: rgb(146, 224, 208);
   --ifm-code-font-size: 95%;
+  --ifm-font-size-base: 85%;
   --ifm-font-family-base: 'Noto Sans JP', sans-serif;
 }
 
